--- a/app/src/main/res/layout/activity_customer_all.xml
+++ b/app/src/main/res/layout/activity_customer_all.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewAct">
+    tools:context=".customerAll">
 
-    <Button
-        android:id="@+id/custViewBtn"
+    <TextView
+        android:id="@+id/allCustTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
-        android:text="Customers" />
+        android:layout_marginTop="95dp"
+        android:text="All Customers" />
 </RelativeLayout>
