--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".CreateAct">
 
+    <Button
+        android:id="@+id/createCustBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="58dp"
+        android:text="Customer" />
 </RelativeLayout>
