--- a/app/src/main/res/layout/activity_proj_main.xml
+++ b/app/src/main/res/layout/activity_proj_main.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ProjMain">
 
+    <Button
+        android:id="@+id/accountsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="148dp"
+        android:text="accounts" />
+
+    <Button
+        android:id="@+id/loansBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/accountsBtn"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="202dp"
+        android:text="Loans" />
 </RelativeLayout>
