--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,85 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
-        android:text="Banking System"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.108" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
-        android:text="By:-"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="283dp" />
+        android:background="#fff"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="0dp"
+        card_view:cardElevation="5dp"
+        card_view:cardCornerRadius="4dp">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="221dp"
-        android:text="Anirudh Swaminathan - 102115004"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="326dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="128dp"
-        android:text="Nirabhra Tapaswi - 102115029"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="362dp" />
+            <TextView
+                android:id="@+id/one"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="BANKING SYSTEM"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="175dp"
-        android:text="Parth Shah - 102115032"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="400dp" />
+            <Button
+                android:id="@+id/projBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/one"
+                android:text="Enter Project"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_border"
+                android:textStyle="bold"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="230dp"
-        android:text="Abhinandan Nabera - 102115038"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="436dp" />
+            <TextView
+                android:id="@+id/two"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/projBtn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="ANIRUDH SWAMINATHAN - 102115004"
+                android:textColor="#000" />
 
-    <Button
-        android:id="@+id/projBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
-        android:text="Enter Project"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="175dp" />
+            <TextView
+                android:id="@+id/three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/two"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="NIRABHRA TAPASWI - 102115029"
+                android:textColor="#000" />
 
+            <TextView
+                android:id="@+id/four"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/three"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="PARTH SHAH - 102115032"
+                android:textColor="#000" />
+
+            <TextView
+                android:id="@+id/five"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/four"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="ABHINANDAN NABERA - 102115038"
+                android:textColor="#000" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
