--- a/app/src/main/res/layout/activity_branch_details.xml
+++ b/app/src/main/res/layout/activity_branch_details.xml
@@ -4,13 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".BranchDetails">
 
-    <TextView
-        android:id="@+id/branchDetailsText"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="232dp" />
+        android:background="#fff"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="0dp"
+        card_view:cardElevation="5dp"
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
+
+            <TextView
+                android:id="@+id/branchDetailsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:layout_centerInParent="true"
+                android:padding="10dp"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="Branch Details" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
