--- a/app/src/main/res/layout/activity_create_cust.xml
+++ b/app/src/main/res/layout/activity_create_cust.xml
@@ -4,67 +4,122 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".createCust">
 
-    <EditText
-        android:id="@+id/custUserIn"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:ems="10"
-        android:hint="username"
-        android:inputType="textPersonName" />
+        android:background="#fff"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="0dp"
+        card_view:cardElevation="5dp"
+        card_view:cardCornerRadius="4dp">
 
-    <EditText
-        android:id="@+id/custPwdIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="132dp"
-        android:ems="10"
-        android:inputType="textPassword" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
 
-    <EditText
-        android:id="@+id/custNameIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="220dp"
-        android:ems="10"
-        android:hint="Full Name"
-        android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/custUserIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/border"
+                android:ems="10"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:hint="Enter User Name"
+                android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/custStreetIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="149dp"
-        android:ems="10"
-        android:hint="street"
-        android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/custPwdIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/custUserIn"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:hint="Enter Password"
+                android:ems="10"
+                android:inputType="textPassword" />
 
-    <EditText
-        android:id="@+id/custCityIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="65dp"
-        android:ems="10"
-        android:hint="city"
-        android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/custNameIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/custPwdIn"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:hint="Enter Full Name"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/custConfBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Confim" />
+            <EditText
+                android:id="@+id/custStreetIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:ems="10"
+                android:layout_below="@+id/custNameIn"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:hint="Enter Street"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/custCityIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:ems="10"
+                android:layout_below="@+id/custStreetIn"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:hint="Enter City"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/custConfBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/custCityIn"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:background="@drawable/button_border"
+                android:fontFamily="@font/hammersmithoneregular"
+                android:text="Confirm" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
