--- a/app/src/main/res/layout/activity_proj_main.xml
+++ b/app/src/main/res/layout/activity_proj_main.xml
@@ -4,25 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".ProjMain">
 
     <Button
         android:id="@+id/accountsBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="148dp"
-        android:text="accounts" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="230dp"
+        android:padding="10dp"
+        android:background="@drawable/button_border"
+        android:fontFamily="@font/hammersmithoneregular"
+        android:text="accounts"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/loansBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/accountsBtn"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="202dp"
-        android:text="Loans" />
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/accountsBtn"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:background="@drawable/button_border"
+        android:fontFamily="@font/hammersmithoneregular"
+        android:text="Loans"
+        android:textSize="18sp"/>
 </RelativeLayout>
